--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -27,7 +27,7 @@ Batteries-included [Storyblok](https://www.storyblok.com/) integration for Nuxt3
 - SSR, SSG, CSR ready Storyblok-Api composables
 - Supports Nuxt3 client side hydration
 - Enhanced Storyblok bridge support
-- Storyblok Editor v2 
+- Use Storyblok Editor v2 
 - Integrated Storyblok routing
 ::
 
