--- a/docs/content/2.getting-started.md
+++ b/docs/content/2.getting-started.md
@@ -64,13 +64,14 @@ You can find more information on how to get an Storyblok Access Token in the [Ge
   Default: `/editor`
   The path where you can access the Storyblok Editor v2
 
-- **storyblokRouting**
+#### `bridge`
+  
+- **disable**
   
   Default: `false`
+  This configuration is optional, as the bridge is automatically enabled in development mode and automatically disabled in production mode. If set to true, preview query will be ignored.
+
+- **previewQuery**
   
-
-- **enableBridge**
-
-  This configuration is optional, as the bridge is automatically enabled in development mode and automatically disabled in production mode. Attention: if set to true the bridge mode is always forced.
-
-  
+  Default: `preview`
+  The query param that activates bridge mode in production. For example: www.example.com/blog?preview=true would enable bridge mode for this page.
