compatibility to nuxt rc9

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -19,16 +19,18 @@ snippet: yarn add --dev nuxt-storyblok
 Nuxt/[Storyblok]{ .text-primary-500 }
 
 #description
-Batteries-included [Storyblok](https://www.storyblok.com/) integration for Nuxt3.
+Batteries-included [Storyblok](https://www.storyblok.com/) integration for Nuxt3.<br>
 
 #extra
 ::list
 - Zero-config and fully typed
-- SSR, SSG, CSR ready Storyblok-Api composables
-- Supports Nuxt3 client side hydration
-- Enhanced Storyblok bridge support
-- Use Storyblok Editor v2 
-- Integrated Storyblok routing
+- SSR, SSG, CSR ready Storyblok-Api composables with client side hydration
+- Automatic preview and publish mode for development and production
+- Enhanced Storyblok bridge support for queries
+- Access to Storyblok Editor as path of custom domain in development and production, e.g. /editor
+- Integrated richtext generator with support for custom classes and components
+- `Coming soon:` generated types for stories
+- `Coming soon:` configurable caching strategies for production
 ::
 
 ::
