--- a/docs/content/2.getting-started.md
+++ b/docs/content/2.getting-started.md
@@ -47,6 +47,11 @@ export default defineNuxtConfig({
   modules: ['nuxt-storyblok'],
   storyblok: {
     accessToken: 'your-access-token'
+    editor: {
+      path: '/editor',
+      previewUrl: 'https://example.com'
+      previewToken: 'your-preview-token'
+    }
   },
 })
 ```
@@ -56,22 +61,33 @@ You can find more information on how to get an Storyblok Access Token in the [Ge
 
 - **accessToken**
 
-  Default: ``
-  Your Storyblok Access Token for your website
+  Mandatory: `<public access token>`
+  Your Storyblok Access Token for your website. Should be a public accessToken, that gives access to the published version.
 
-- **editorPath**
+- **version**
 
+  Default: `<automatically set>`
+  Forces a specific version of the Storyblok API to be used. Normally, the version is determined if you are in editor and preview mode (draft) or not (published).
+
+#### `editor`
+
+- **path**
   Default: `/editor`
   The path where you can access the Storyblok Editor v2
 
+- **previewUrl**
+  Example: `<e.g. https://example.com>`
+  Must be set if the editor is called with a URL other than localhost, for example in production mode.
+  
+
+- **previewToken**
+  Default: `<preview access token>`
+  A preview token can be optionally specified. This is used automatically when the page is called in the editor or with a preview URL.
+
+
 #### `bridge`
   
-- **disable**
+- **enabled**
   
-  Default: `false`
-  This configuration is optional, as the bridge is automatically enabled in development mode and automatically disabled in production mode. If set to true, preview query will be ignored.
-
-- **previewQuery**
-  
-  Default: `preview`
-  The query param that activates bridge mode in production. For example: www.example.com/blog?preview=true would enable bridge mode for this page.
+  Default: `<automatically set>`
+  This configuration is optional, as the bridge is automatically enabled in development mode and automatically disabled in production mode. If set to true, bridge mode will be forced (not recommended).
